--- a/css/index.css
+++ b/css/index.css
@@ -7,13 +7,16 @@ body{
     width: 100%;
     background-image: url(../img/background.jpg);
     color: #ffffff;
+    font-family: Montserrat;
 }
 
 #logo{
     background-color: #000000;
     padding: 10px 0 10px 58px;
 }
+
  /*cointainer */
+
 .container{
     display: flex;
     padding: 177px 88px 177px 58px;
@@ -25,13 +28,28 @@ body{
 .colOne {
     width: 60%;
 }
-h1 {
-    font-family: Montserrat;
+.colOne h1 {
     font-style: normal;
     font-weight: 800;
     font-size: 48px;
     line-height: 59px;
-    color: #FFFFFF;
+    padding-bottom: 33px;
+}
+
+.colOne p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 29px;
+}
+
+.container ul {
+    list-style: none!important;
+}
+div#divCountdown {
+    width: 707px;
+    height: 254px;
+    background: #7800B0;
 }
 
 
@@ -40,9 +58,31 @@ h1 {
     width: 40%;
     background: #D2D2D2;
     color: #000000;
+    padding-top: 58px;
 }
 
+.colTwo p, .colTwo h2 {
+    width: 284px;
+    padding-left: 32px;
+}
 
+.colTwo p {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    padding-top: 14px;
+}
+
+#divCountdown h2 {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 44px;
+    text-align: center;
+    padding-top: 22px;
+}
 @media all and (max-width: 900px) { 
     
     .container{
