--- a/css/index.css
+++ b/css/index.css
@@ -48,11 +48,25 @@ body{
 }
 div#divCountdown {
     width: 707px;
-    height: 254px;
     background: #7800B0;
+    padding-bottom: 43px;
+    margin-top: 70px;
 }
-
-
+div#divCd {
+    text-align: center;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 96px;
+    line-height: 117px;
+}
+#divCountdown h2 {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 44px;
+    text-align: center;
+    padding-top: 22px;
+}
 /*column 2*/
 .colTwo {
     width: 40%;
@@ -75,13 +89,11 @@ div#divCountdown {
     padding-top: 14px;
 }
 
-#divCountdown h2 {
-    font-style: normal;
-    font-weight: 800;
-    font-size: 36px;
-    line-height: 44px;
-    text-align: center;
-    padding-top: 22px;
+
+
+form {
+    display: inline-grid;
+
 }
 @media all and (max-width: 900px) { 
     
