--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,18 @@
-html, body, h1, h2, p{
+*{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body{
-    width: 100%;
-    background-image: url(../img/background.jpg);
+    background: url(../img/background.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     color: #ffffff;
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
+
 }
 
 #logo{
@@ -15,18 +20,24 @@ body{
     padding: 10px 0 10px 58px;
 }
 
- /*cointainer */
-
-.container{
-    display: flex;
-    padding: 177px 88px 177px 58px;
+.container-fluid {
+    margin: 0 60px;
+    /* background-color: blueviolet; */
+    width:90%;
 }
+
+.colwrap {
+    padding: 177px 0;
+}
+
+
 
 /*column 1*/
 
 
 .colOne {
-    width: 60%;
+    /* width: 60%; */
+    margin-right: 183px;
 }
 .colOne h1 {
     font-style: normal;
@@ -46,13 +57,15 @@ body{
 .container ul {
     list-style: none!important;
 }
-div#divCountdown {
+
+#divCountdown {
     width: 707px;
     background: #7800B0;
     padding-bottom: 43px;
     margin-top: 70px;
 }
-div#divCd {
+
+#divCd {
     text-align: center;
     font-style: normal;
     font-weight: 800;
@@ -67,6 +80,8 @@ div#divCd {
     text-align: center;
     padding-top: 22px;
 }
+
+
 /*column 2*/
 .colTwo {
     width: 40%;
@@ -81,7 +96,6 @@ div#divCd {
 }
 
 .colTwo p {
-    font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -89,11 +103,32 @@ div#divCd {
     padding-top: 14px;
 }
 
+.colTwo h2 {
+    font-weight: 800;
+}
 
 
 form {
-    display: inline-grid;
+    padding: 0 auto;
+    width: 404px;
 
+}
+
+.form-group {
+    margin: 0 auto;
+}
+
+.form-control {
+    margin-bottom: 40px;
+    width: 100%;
+}
+
+.btn {
+    background: #7800B0;
+    color: white;
+    font-weight: 800;
+    border-radius: 0;
+    width: 100%;
 }
 @media all and (max-width: 900px) { 
     
