--- a/css/index.css
+++ b/css/index.css
@@ -12,18 +12,24 @@ body{
     background-size: cover;
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
-
+    
 }
 
 #logo{
     background-color: #000000;
-    padding: 10px 0 10px 58px;
+    width: 100%;
+    height: 60px;
+   
+}
+
+.logo {
+     padding: 10px 0 10px 58px;
 }
 
 .container-fluid {
-    margin: 0 60px;
-    /* background-color: blueviolet; */
-    width:90%;
+    padding: 0 60px;
+    
+ 
 }
 
 .colwrap {
@@ -36,7 +42,6 @@ body{
 
 
 .colOne {
-    /* width: 60%; */
     margin-right: 183px;
 }
 .colOne h1 {
@@ -59,24 +64,23 @@ body{
 }
 
 #divCountdown {
-    width: 707px;
+    width: 100%; 
     background: #7800B0;
-    padding-bottom: 43px;
     margin-top: 70px;
+    padding-bottom: 40px;
 }
 
 #divCd {
     text-align: center;
     font-style: normal;
     font-weight: 800;
-    font-size: 96px;
-    line-height: 117px;
+    font-size: 5rem;
+    padding: 0 30px;
 }
 #divCountdown h2 {
     font-style: normal;
     font-weight: 800;
-    font-size: 36px;
-    line-height: 44px;
+    font-size: 2rem;
     text-align: center;
     padding-top: 22px;
 }
@@ -130,10 +134,86 @@ form {
     border-radius: 0;
     width: 100%;
 }
-@media all and (max-width: 900px) { 
-    
-    .container{
-        flex-direction: column;
+
+
+
+@media (min-width: 992px) and (max-width: 1159px) {
+
+
+
+}
+
+
+ @media (max-width: 991px) {
+
+    body {
+    background: black;
     }
+
+    .text {
+       padding-left: 30px;
+    }
+    .colwrap {
+        flex-direction: column;
+        padding: 100px 0;
+    }
+
+    #divCountdown h2 {
+        font-size: 40px;
+        
+    }
+    #divCountdown {
+        width: 100%;
+        padding: 10px;
+        
+    }
+
+    #divCd {
+    font-size: 55px;
+    }
+
+    form {
+        
+        padding-bottom: 60px;
+        width: 100%;
     
+    }
+    .form-group {
+        width: 80%;
+    }
+    .colOne {
+        width: 90%;
+        margin: 0 20px;
+        margin-bottom: 60px;
+    }
+    .colTwo {
+        width: 90%;
+        margin: 0 20px;
+        background: #D2D2D2;
+        color: #000000;
+        padding-top: 58px;
+    }
+ }
+
+ @media (max-width: 576px) {
+
+    .colOne {
+        width: 90%;
+        margin-bottom: 60px;
+    }
+
+    #divCountdown h2 {
+        font-size: 25px;
+        
+    }
+
+    #divCd {
+    font-size: 25px;
+    }
+
+
+    .text {
+        font-size: 25px;
+        width: 100%;
+     }
  }
