--- a/css/index.css
+++ b/css/index.css
@@ -192,7 +192,12 @@ form {
  }
 
  @media (max-width: 576px) {
-
+    #logo {
+        text-align: center;
+    }
+    .logo {
+        padding-left: 0;
+    }
     .colOne {
         width: 90%;
         margin-bottom: 60px;
@@ -209,7 +214,12 @@ form {
 
 
     .text {
-        font-size: 25px;
-        width: 100%;
+        padding: 0 20px;
      }
+
+     .colTwo p, .colTwo h2 {
+
+        width: 100%;
+        padding: 0;
+    }
  }
