--- a/css/index.css
+++ b/css/index.css
@@ -117,6 +117,8 @@ form {
 
 .form-group {
     margin: 0 auto;
+    width: 100%;
+    padding: 0 35px;
 }
 
 .form-control {
@@ -129,9 +131,11 @@ form {
     color: white;
     font-weight: 800;
     border-radius: 0;
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
+    text-align: center!important;
+    display: block;
 }
-
 
 
 @media (min-width: 992px) {
@@ -214,15 +218,12 @@ form {
     }
 
     #divCountdown h2 {
-        font-size: 25px;
-        
+        font-size: 25px;   
     }
 
     #divCd {
     font-size: 25px;
     }
-
-
     .text {
         padding: 0 20px;
      }
@@ -231,6 +232,17 @@ form {
 
         width: 100%;
         padding: 0;
+    }
+    .container-fluid {
+        padding: 0 20px;
+    }
+    form {
+        padding-bottom: 60px;
+        width: 100%;
+    }
+    .form-group {
+        width: 100%;
+        padding: 0 20px;
     }
  }
 
