--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: url(../img/background.jpg) no-repeat center center fixed; 
+    background: url(../img/backgroundimg2.png) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
