--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,18 @@ body{
     
 }
 
+a {
+    font-weight: 800;
+    color: white;
+    font-size:  1.5rem;
+    
+}
+
+a:hover {
+    color: #290639;
+    text-decoration: none;
+}
+
 #logo{
     background-color: #000000;
     width: 100%;   
@@ -167,15 +179,6 @@ section.container-fluid.containerTwo {
 
 
 
-/*col two */
-img.gifHome {
-    padding-top: 0;
-    width: 100%;
-    height: 100%;
-}
-
-
-
  @media (max-width: 1326px) {
 
     
@@ -292,9 +295,7 @@ img.gifHome {
  }
 
 
-
-
-
+/*pop up*/
 
 .popUpBox{
     background:rgba(0,0,0,.4);
